# marimo-cython

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: mandelbrot.py
src/marimo_cython/: __init__.py  compiler.py  cy.py
tests/: test_compiler.py
